--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sumi Tailor</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet" />
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
