membuat halaman ui orders

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Sumi Tailor</title>
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </body>
 </html>
